--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "esbuild": "^0.27.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.57.0"
   }
 }
